JG-2008-12-08-0: Enhancem.:  Added test for issue 2822. It turned out to not be
                             a SGE bug, but the scenario (tightly integrated
                             job with tasks in multiple queue instances per
                             host) was not yet tested in testsuite.
                 Review:     MD

CR-2008-12-08-0: Bugfix:     Fixed testsuite test 2254 which did not wait
                             for a jobstart
                 Review:     JG

RH-2008-12-05-1: Bugfix:     Hedeby: timeout for junit tests set to 5 minutes
                
RH-2008-12-05-0: Bugfix:     With checkin RH-2008-12-03-0 starting testsuite
                             with hedeby checktree was no longer possible. 
                             Never use the configuration of an additional checktree
                             in an init level function.
                 Review:     TB

                             
HP-2008-12-04-0: Bugfix:     Fixed wrong error messages in performance/commlib test
                 Review:     CR

EB-2008-12-04-0: Enhancemn.: - Added new test for which tests qalter in
                               combination with JSV on server side
                             - Added additional check for JSV URL parsing
                 Review:     MD

RH-2008-12-03-0: Bugfix:     manage_admin_user and assigned_resource_reset did not 
                             work with the fix of issue 582
                 Enhancem.:  o check for issue 582 added 
                             o new utility methods wait_for_resource_info_opt and
                               get_component_info_opt
                 Review:     TB

HP-2008-12-03-0: Bugfix:     fixed error in architecture resolving in qhost test
                 Review:     MD

CR-2008-12-03-1: Bugfix:     - fixed error when setting up "sendmail" as default
                               mailing application
                 Review:     MD
